--- a/css/apps.css
+++ b/css/apps.css
@@ -69,6 +69,12 @@
 	margin: 0px;
 }
 
+#u1349:active
+{
+	background-color: #6B6B6B;
+	margin: 0px;
+}
+
 #u1327
 {
 	width: 87px;
@@ -86,7 +92,7 @@
 	position: relative;
 }
 
-#u1328:hover
+#u1349.MuseMenuActive,#u1328:hover
 {
 	background-color: #999999;
 	margin: 0px;
@@ -127,6 +133,12 @@
 	margin: 0px;
 }
 
+#u1328:active,#u1335:active
+{
+	background-color: #6B6B6B;
+	margin: 0px;
+}
+
 #u1341
 {
 	width: 88px;
@@ -144,13 +156,13 @@
 	position: relative;
 }
 
-#u1342:hover
+#u1335.MuseMenuActive,#u1342:hover
 {
 	background-color: #999999;
 	margin: 0px;
 }
 
-#u1349:active,#u1328:active,#u1335:active,#u1342:active
+#u1342:active
 {
 	background-color: #6B6B6B;
 	margin: 0px;
@@ -182,6 +194,12 @@
 #u1321:active
 {
 	background-color: #6B6B6B;
+	margin: 0px;
+}
+
+#u1321.MuseMenuActive
+{
+	background-color: #999999;
 	margin: 0px;
 }
 
