--- a/css/home.css
+++ b/css/home.css
@@ -235,7 +235,7 @@
 {
 	width: 0.01px;
 	margin-left: 19px;
-	margin-top: 52px;
+	margin-top: 37px;
 	position: relative;
 }
 
@@ -317,14 +317,19 @@
 {
 	z-index: 73;
 	width: 138px;
+	border-width: 1px;
+	border-style: solid;
+	border-color: #000000;
 	background-color: transparent;
 	-moz-border-radius: 100px;
 	-webkit-border-radius: 100px;
 	-khtml-border-radius: 100px;
 	border-radius: 100px;
+	margin-bottom: -1px;
 	position: relative;
 	margin-right: -10000px;
-	left: 585px;
+	margin-top: -1px;
+	left: 584px;
 }
 
 #u598-3
@@ -349,8 +354,8 @@
 	z-index: 7;
 	width: 238px;
 	min-height: 30px;
-	line-height: 29px;
 	font-size: 24px;
+	line-height: 29px;
 	font-family: Geneva, Verdana, Lucida Sans, Lucida Sans Unicode, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -361,8 +366,8 @@
 {
 	z-index: 17;
 	width: 227px;
-	line-height: 29px;
 	font-size: 24px;
+	line-height: 29px;
 	font-family: Geneva, Verdana, Lucida Sans, Lucida Sans Unicode, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -374,8 +379,8 @@
 	z-index: 21;
 	width: 157px;
 	min-height: 34px;
-	line-height: 29px;
 	font-size: 24px;
+	line-height: 29px;
 	font-family: Geneva, Verdana, Lucida Sans, Lucida Sans Unicode, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -441,8 +446,8 @@
 	z-index: 68;
 	width: 357px;
 	min-height: 59px;
-	line-height: 43px;
 	font-size: 36px;
+	line-height: 43px;
 	font-family: Trebuchet, Trebuchet MS, Tahoma, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -538,8 +543,8 @@
 	z-index: 77;
 	width: 83px;
 	min-height: 39px;
-	line-height: 29px;
 	font-size: 24px;
+	line-height: 29px;
 	font-family: Geneva, Verdana, Lucida Sans, Lucida Sans Unicode, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -550,8 +555,8 @@
 	z-index: 83;
 	width: 103px;
 	min-height: 29px;
-	line-height: 29px;
 	font-size: 24px;
+	line-height: 29px;
 	font-family: Geneva, Verdana, Lucida Sans, Lucida Sans Unicode, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -573,8 +578,8 @@
 	z-index: 92;
 	width: 70px;
 	min-height: 31px;
-	line-height: 29px;
 	font-size: 24px;
+	line-height: 29px;
 	font-family: Geneva, Verdana, Lucida Sans, Lucida Sans Unicode, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -583,8 +588,8 @@
 
 #contact
 {
-	margin-left: 21px;
-	margin-top: 165px;
+	margin-left: 25px;
+	margin-top: 149px;
 	position: relative;
 }
 
@@ -592,7 +597,7 @@
 {
 	width: 0.01px;
 	margin-left: 25px;
-	margin-top: 64px;
+	margin-top: 80px;
 	position: relative;
 }
 
@@ -601,8 +606,8 @@
 	z-index: 35;
 	width: 213px;
 	min-height: 39px;
-	line-height: 43px;
 	font-size: 36px;
+	line-height: 43px;
 	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -651,8 +656,8 @@
 	z-index: 55;
 	width: 258px;
 	min-height: 90px;
-	line-height: 22px;
 	font-size: 18px;
+	line-height: 22px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -681,8 +686,8 @@
 	z-index: 41;
 	width: 181px;
 	min-height: 19px;
-	line-height: 22px;
 	font-size: 18px;
+	line-height: 22px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	font-weight: normal;
 	position: relative;
@@ -733,8 +738,8 @@
 	z-index: 49;
 	width: 166px;
 	min-height: 16px;
-	line-height: 22px;
 	font-size: 18px;
+	line-height: 22px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	font-weight: normal;
 	margin-top: 6px;
